--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,7 +1,7 @@
 @import "reset";
 @import "themes/normal";
 @import "themes/dark";
-@import "variables/global";
+//@import "global";
 
 .app {
   font: var(--font-m);
