create UI Kit component, add Navbar

--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,6 +1,9 @@
 :root {
   --bg-color: #a4a4a7;
+  --inverted-bg-color: #090958;
 
   --primary-color: #0028b0;
   --secondary-color: #0453ff;
+  --inverted-primary-color: #049604;
+  --inverted-secondary-color: #04ff04;
 }
