--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,9 +1,9 @@
 .app.dark {
-  --bg-color: #090958;
-  --inverted-bg-color: #a4a4a7;
+    --bg-color: #090949;
+    --inverted-bg-color: #e8e8ea;
 
-  --primary-color: #049604;
-  --secondary-color: #04ff04;
-  --inverted-primary-color: #0028b0;
-  --inverted-secondary-color: #0453ff;
+    --primary-color: #049604;
+    --secondary-color: #04ff04;
+    --inveted-primary-color: #0232c2;
+    --inveted-secondary-color: #0449e0;
 }
