--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,9 +1,9 @@
 :root {
-  --bg-color: #a4a4a7;
-  --inverted-bg-color: #090958;
+    --bg-color: #e8e8ea;
+    --inverted-bg-color: #090949;
 
-  --primary-color: #0028b0;
-  --secondary-color: #0453ff;
-  --inverted-primary-color: #049604;
-  --inverted-secondary-color: #04ff04;
+    --primary-color: #0232c2;
+    --secondary-color: #0449e0;
+    --inverted-primary-color: #049604;
+    --inverted-secondary-color: #04ff04;
 }
