--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -7,14 +7,18 @@
   transition: width 0.3s;
 }
 
-.collapsed{
+.collapsed {
   width: var(--sidebar-width-collapsed);
 }
 
-.switchers{
+.switchers {
   position: absolute;
   bottom: 20px;
   display: flex;
   justify-content: center;
   width: 100%;
+}
+
+.lang {
+  margin-left: 20px;
 }
